[project]
name = "dotfiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
markers = [
    "install: tests for install.sh flows",
    "validate: PATH validation tests",
    "versions: software version check tests",
    "deploy: deploy and idempotency tests",
    "check: basic just check commands",
]
