[project]
name = "dotfiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

# Submodules and external dependencies are exempt from local lint/format
# (per project structure rules in ROOT_AGENTS.md / CLAUDE.md).
# Sources of truth: `git config --file .gitmodules --get-regexp path`.
[tool.ruff]
extend-exclude = [
    "emulator",
    "gcloud",
    "guardrails",
    "knowledge-work-plugins",
    "protocols",
    "skills",
    "telemetry",
    # `private/certificates/` is created by Let's Encrypt with mode 0700.
    # Inside a bind-mounted dev container ruff cannot traverse it and aborts.
    # Nothing under private/ is Python source anyway.
    "private",
]

[tool.pytest.ini_options]
markers = [
    "install: tests for install.sh flows",
    "validate: PATH validation tests",
    "versions: software version check tests",
    "deploy: deploy and idempotency tests",
    "check: basic just check commands",
]
