[project]
name = "emulator-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "aiohttp>=3.10.5",
    "litellm>=1.86.2",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "typer>=0.26.4",
    "uvicorn>=0.48.0",
    "mlflow>=3.4.0",
]

[dependency-groups]
dev = [
    "docker>=7.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.4.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that require Docker and running emulators",
]
# Default timeout for all tests (can be overridden per test)
timeout = 180
# Timeout method: 'thread' is more compatible with async tests
timeout_method = "thread"
