[project]
name = "emulator-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# Capped below 3.14: litellm went from a pure-python wheel (1.91.0, py3) to
# Rust extension wheels (1.92.0, cp310-cp313 only). With no cp314 wheel, uv
# falls back to the sdist, whose maturin/pyo3 build refuses 3.14 outright
# ("the configured Python interpreter version (3.14) is newer than PyO3's
# maximum supported version"). litellm itself declares requires-python <3.14.
# Lift once litellm ships cp314 wheels (and bump test-emulators.yaml back).
requires-python = ">=3.13,<3.14"
dependencies = [
    "asyncpg>=0.30.0",
    "aiohttp>=3.14.1",
    "litellm>=1.92.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "typer>=0.26.7",
    "uvicorn>=0.51.0",
    "mlflow>=3.4.0",
]

[dependency-groups]
dev = [
    "docker>=7.2.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that require Docker and running emulators",
]
# Default timeout for all tests (can be overridden per test)
timeout = 180
# Timeout method: 'thread' is more compatible with async tests
timeout_method = "thread"

[tool.uv]
# Supply-chain quarantine: only resolve distributions that have been public for
# at least 7 days. This is repo-authoritative (not just a personal global uv
# config), so EVERY `uv lock` -- local, CI, and Dependabot's uv updater --
# reproduces `exclude-newer-span = "P7D"` in uv.lock instead of silently
# dropping it. Mirrors the npm `min-release-age=7` quarantine. uv serializes the
# relative "7 days" value to the lock's `exclude-newer-span = "P7D"`.
# Security fixes that need a <7-day-old release override this once with
# `uv lock --upgrade-package <pkg> --exclude-newer "$(date -u +%FT%TZ)"`; a plain
# `uv lock` afterwards is conservative and keeps the already-locked version.
exclude-newer = "7 days"

# ADR 0028: route resolution through the Flatt Security PyPI mirror (malware-
# scanned). flatt becomes the default index, replacing the implicit pypi.org.
# Public, no-auth endpoint -- no secret distribution. The invariant (enforced by
# `just check-uv-flatt-index`) is the ABSENCE of raw pypi.org in the committed
# lock. exclude-newer above is orthogonal and preserved (P7D stays in the lock).
[[tool.uv.index]]
name = "flatt"
url = "https://pypi.flatt.tech/simple/"
default = true
