[project]
name = "opentelemetry-example"
version = "0.1.0"
description = "FastAPI application with OpenTelemetry instrumentation"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-exporter-otlp",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-instrumentation-httpx",
    "httpx",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]