[project]
name = "rttm"
version = "0.1.0"
description = "RTTM file tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "pympi-ling>=1.71",
    "ruff>=0.15.21",
    "pytest>=9.1.1",
]

# ADR 0028: route resolution through the Flatt Security PyPI mirror (malware-
# scanned). flatt becomes the default index, replacing the implicit pypi.org.
# Public, no-auth endpoint -- no secret distribution. The invariant (enforced by
# `just check-uv-flatt-index`) is the ABSENCE of raw pypi.org in the committed lock.
[[tool.uv.index]]
name = "flatt"
url = "https://pypi.flatt.tech/simple/"
default = true
